fix initial swagger
